k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: confetti
  labels:
    name: confetti
